[gd_scene load_steps=22 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemies.png" type="Texture" id=2]
[ext_resource path="res://Hit & Hurt Boxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hit & Hurt Boxes/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hit & Hurt Boxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = SubResource( 16 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 18 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 7.73493, 5.67702 )

[sub_resource type="CircleShape2D" id=21]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 8, 4 )

[sub_resource type="CircleShape2D" id=23]

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 12 )
frames = SubResource( 19 )
animation = "fly"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.659858, 0.659858 )
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0.5, -14 )
scale = Vector2( 1.2282, 1.05689 )
shape = SubResource( 24 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
scale = Vector2( 9.50203, 9.50203 )
shape = SubResource( 21 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 22 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 23 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/Start = SubResource( 14 )
anims/Stop = SubResource( 15 )

[connection signal="no_health" from="." to="." method="_on_Enemy_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
[editable path="SoftCollision"]
